[gd_scene load_steps=8 format=2]

[ext_resource path="res://Spell Effects/BloodEffects/4/1_1.png" type="Texture" id=1]
[ext_resource path="res://Spell Effects/BloodEffects/4/1_3.png" type="Texture" id=2]
[ext_resource path="res://Spell Effects/BloodEffects/4/1_2.png" type="Texture" id=3]
[ext_resource path="res://Spell Effects/BloodEffects/4/1_0.png" type="Texture" id=4]
[ext_resource path="res://Skills/BloodTrail/BloodPool.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 21.3776

[node name="BloodPool" type="Node2D"]
position = Vector2( -1, 1 )
scale = Vector2( 3, 3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
scale = Vector2( 0.333333, 0.333333 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( -8, -15 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
